# Gestalt

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  GESTALT-STANDARDS.md  ORCHESTRATION-API.md  README.md  TERMINAL-PERFORMANCE-PLAN.md  launcher.sh
.github/workflows/: ci-release.yml
.perf/: 2026-03-01-024409-profile-terminal.txt  2026-03-01-030953-profile-terminal-m4.txt  2026-03-01-074955-profile-terminal-final.txt  2026-03-01-081702-profile-terminal-render-baseline.txt  2026-03-01-081702-timev-profile-terminal.txt  2026-03-01-082534-profile-terminal-render-instrumented-baseline.txt  2026-03-01-083147-profile-terminal-m2-fullscan-reduced.txt  2026-03-01-084224-profile-terminal-m2-fullscan-reduced-v2.txt  2026-03-01-084627-profile-terminal-m3-render-window.txt  2026-03-01-090832-profile-terminal-m4-autosave-history-cap.txt  2026-03-01-091603-profile-terminal-m5-final-rerun.txt  2026-03-01-091848-profile-terminal-v2-plan-baseline.txt  2026-03-01-091848-profile-terminal-v2-plan-smoke.txt  2026-03-01-092907-profile-terminal-v2-m1-refresh.txt  2026-03-01-093419-profile-terminal-v2-m2-resize.txt  2026-03-01-101557-profile-terminal-v2-m3-scroll.txt  2026-03-01-114353-profile-terminal-v2-m4-orchestrator.txt  2026-03-01-120811-profile-terminal-v2-m5-autosave.txt  2026-03-01-121706-profile-terminal-v2-m6-gitwatcher.txt  2026-03-01-122105-profile-terminal-v2-final.txt  2026-03-01-122122-profile-terminal-v2-final.txt
assets/: Gestalt_small.rgba
docs/: APPSTATE-DOMAIN-SPLIT-INVESTIGATION.md  GIT-PANEL-IMPLEMENTATION-CHECKLIST.md  INSERT-COMMANDS-IMPLEMENTATION-CHECKLIST.md  INSERT-COMMANDS-VERIFICATION.md  PERFORMANCE-RECOMMENDATIONS.md  STANDARDS-REMEDIATION-CLOSEOUT.md  alacritty-terminal-native-gpu-spike-plan.md
docs/emily-research/: 01-executive-summary.md  02-architecture-reconstruction.md  03-local-reproduction-blueprint.md  04-evidence-and-sources.md  05-developer-profile-matrix.md  06-rust-memory-system-high-level-design.md  07-whatsapp-signal-analysis.md  08-gestalt-emily-development-plan.md  09-emily-crate-continuation-plan.md  10-emily-membrane-crate-design-plan.md  11-emily-membrane-milestone-1-implementation-plan.md  12-emily-membrane-milestone-3-implementation-plan.md  13-emily-membrane-routing-policy-plan.md  14-emily-membrane-execution-depth-plan.md  15-gestalt-emily-adoption-and-test-data-plan.md  16-gestalt-emily-pantograph-integration-plan.md  README.md
docs/perf-results/: 2026-03-01-025300-baseline-v2.md  2026-03-01-025719-milestone-2.md  2026-03-01-030134-milestone-3.md  2026-03-01-074955-final.md  2026-03-01-081702-terminal-render-refresh-baseline.md  2026-03-01-082534-render-instrumentation-baseline.md  2026-03-01-084224-milestone-2-round-scan-removal.md  2026-03-01-084627-milestone-3-render-window.md  2026-03-01-090832-milestone-4-autosave-history-cap.md  2026-03-01-091603-milestone-5-final-comparison.md  2026-03-07-freeze-stabilization.md  (+12 more)
emily/: Cargo.toml  README.md
emily-membrane/: Cargo.toml  README.md
emily-membrane/src/: README.md  contracts.rs  lib.rs  runtime.rs
emily-membrane/src/contracts/: README.md  ir.rs  multi_remote.rs  reconstruction.rs  retry.rs  validation.rs
emily-membrane/src/providers/: README.md  mod.rs  pantograph.rs
emily-membrane/src/runtime/: README.md  multi_remote.rs  policy.rs  reconstruction.rs  remote.rs  retry.rs  sensitivity.rs  validation.rs
emily-membrane/tests/: local_only_acceptance.rs  remote_acceptance.rs  runtime.rs
emily/src/: README.md  api.rs  error.rs  inference.rs  lib.rs  model.rs  runtime.rs
emily/src/inference/: README.md  pantograph.rs
emily/src/inference/pantograph/: README.md  client.rs  provider.rs  tests.rs
emily/src/model/: README.md  earl.rs  ecgl.rs  episode.rs  sovereign.rs
emily/src/runtime/: README.md  earl.rs  earl_tests.rs  ecgl.rs  ecgl_tests.rs  episode_tests.rs  episodes.rs  lifecycle.rs  retrieval.rs  sovereign.rs  sovereign_tests.rs  test_support.rs  tests.rs  vectorization.rs
emily/src/store/: README.md  mod.rs  surreal.rs
emily/src/store/surreal/: README.md  earl.rs  ecgl.rs  episodes.rs  mod.rs  sovereign.rs  tests.rs  text.rs
scripts/: perf-gate.sh  perf-summary.sh
src/: README.md  emily_bridge.rs  emily_membrane_dev.rs  lib.rs  local_agent_context.rs  local_agent_episode.rs  local_agent_membrane.rs  local_restore.rs  main.rs  orchestration_activity.rs  orchestrator.rs  pantograph_host.rs  pantograph_reasoning_probe.rs  path_validation.rs  state.rs  style.css  terminal.rs  ui.rs
tests/: README.md  emily_inspect_corpus.rs  emily_local_agent_context.rs  emily_local_agent_episode.rs  emily_local_agent_membrane.rs  emily_membrane_dev.rs  emily_orchestration_activity.rs  emily_seed_corpus.rs  emily_semantic_retrieval.rs  git_panel_context_switch.rs  git_panel_ops.rs  insert_commands.rs  local_agent_run_checkpoints.rs  orchestration_log.rs  orchestrator_git_log.rs  pantograph_host_reasoning.rs  persistence_recovery.rs  persistence_roundtrip.rs  resume_startup.rs  run_checkpoints.rs  state_transitions.rs  terminal_native_core.rs  terminal_native_gpu_scene.rs  terminal_native_raster.rs
(+117 files in other folders)
