[package]
name = "gestalt"
version = "0.1.0"
edition = "2024"
description = "Desktop workspace for coordinating large terminal fleets"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["time"] }
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
