[package]
name = "gestalt"
version = "0.1.0"
edition = "2024"
description = "Desktop workspace for coordinating large terminal fleets"

[features]
default = []
native-renderer = ["dep:bytemuck", "dep:dioxus-native", "dep:wgpu"]

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-native = { version = "0.7.3", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
wgpu = { version = "26.0", optional = true }
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
vt100 = "0.15"
arboard = "3.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
notify = "7"
emily = { path = "emily", features = ["pantograph"] }
emily-membrane = { path = "emily-membrane", features = ["pantograph"] }
pantograph_workflow_service = { package = "pantograph-workflow-service", path = "../Pantograph/crates/pantograph-workflow-service" }
node-engine = { path = "../Pantograph/crates/node-engine", features = ["inference-nodes"] }
inference = { path = "../Pantograph/crates/inference", features = ["backend-llamacpp", "std-process"] }
workflow-nodes = { path = "../Pantograph/crates/workflow-nodes", features = ["model-library"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
pulldown-cmark = "0.12"
