[package]
name = "emily-membrane"
version = "0.1.0"
edition = "2024"
description = "Sovereign-dispatch membrane layer above the Emily core crate"

[dependencies]
async-trait = "0.1"
emily = { path = "../emily" }
pantograph_workflow_service = { package = "pantograph-workflow-service", path = "../../Pantograph/crates/pantograph-workflow-service", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
pantograph = ["dep:pantograph_workflow_service"]
