[package]
name = "emily"
version = "0.1.0"
edition = "2024"
description = "Reusable Emily memory system core API"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
