[package]
name = "emily"
version = "0.1.0"
edition = "2024"
description = "Reusable Emily memory system core API"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.0.4", default-features = false, features = ["kv-surrealkv"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
pantograph_workflow_service = { package = "pantograph-workflow-service", path = "../../Pantograph/crates/pantograph-workflow-service", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
pantograph = ["dep:pantograph_workflow_service"]
